{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 265,
  "lineage": "8eca114d-6bb1-94ca-3e96-9233caad70cc",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-08T07:25:38.104-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test2-161022/global/firewalls/kube-fw-allow-http",
            "log_config": [],
            "name": "kube-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/networks/kube-network",
            "priority": 1000,
            "project": "test2-161022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/firewalls/kube-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kube_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-kubeadm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443",
                  "10250",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-08T07:25:38.028-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test2-161022/global/firewalls/kube-fw-allow-kubeadm",
            "log_config": [],
            "name": "kube-fw-allow-kubeadm",
            "network": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/networks/kube-network",
            "priority": 1000,
            "project": "test2-161022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/firewalls/kube-fw-allow-kubeadm",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kube_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-08T07:25:37.947-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test2-161022/global/firewalls/kube-fw-allow-ssh",
            "log_config": [],
            "name": "kube-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/networks/kube-network",
            "priority": 1000,
            "project": "test2-161022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/firewalls/kube-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kube_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "kube_master_eu2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "ioumassate",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20231004",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/test2-161022/zones/us-west2-b/disks/kube-ioumassate-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/test2-161022/zones/us-west2-b/instances/kube-ioumassate-master",
            "instance_id": "4056453767901414120",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ioumassate:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDYDNtFiKclSLEaVOZSZ4vQfAB69l3K8tYeK16zzpg+hiTmagiZvEGq8XB0Q46dvroMAbEzAVEayihwcjjcsNtNLNHjHjImx8mwE0a+62smM0UmjuyXOym1pdNsaWq0Gg7zSIlOj4j3AfWg1DQQ0d7gQ5lFqpncR2fDkfTywg9s/10p54bKcMSlOIMd5ihCmoRODs5d9aVyCmHrCBnxcryOwsacS/i5wcPmBNvyqb1lh9GICjD+xthi4TjTEbGf2sxXSkGP0Tqvp4GZ0IJlzJi080LTsopKl6K5iOUHZA0HPBuH+1JkMl9L2rFcBSnloVFZMYcCxZMMBNhdTDC6NpLAZNznMR9Vaan1g/pUtz4t9Z+vW4a6IbGZiwHRxAj66C48/4B4Aq70NXA4oWqAXb4mKF8xGlO24TPKwZOZuE [...]
            },
            "metadata_fingerprint": "MUbas5LsmDE=",
            "name": "kube-ioumassate-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.236.37.42",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/networks/kube-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/test2-161022/regions/us-west2/subnetworks/kube-subnet-eu",
                "subnetwork_project": "test2-161022"
              }
            ],
            "project": "test2-161022",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test2-161022/zones/us-west2-b/instances/kube-ioumassate-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-west2-b"
          },
          "dependencies": [
            "google_compute_network.kube_network",
            "google_compute_subnetwork.kube_subnet_eu2"
          ]
        },
        {
          "index_key": "kkadioui",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20231010",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/test2-161022/zones/us-west2-b/disks/kube-kkadioui-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/test2-161022/zones/us-west2-b/instances/kube-kkadioui-master",
            "instance_id": "671454243647191053",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ioumassate:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDYDNtFiKclSLEaVOZSZ4vQfAB69l3K8tYeK16zzpg+hiTmagiZvEGq8XB0Q46dvroMAbEzAVEayihwcjjcsNtNLNHjHjImx8mwE0a+62smM0UmjuyXOym1pdNsaWq0Gg7zSIlOj4j3AfWg1DQQ0d7gQ5lFqpncR2fDkfTywg9s/10p54bKcMSlOIMd5ihCmoRODs5d9aVyCmHrCBnxcryOwsacS/i5wcPmBNvyqb1lh9GICjD+xthi4TjTEbGf2sxXSkGP0Tqvp4GZ0IJlzJi080LTsopKl6K5iOUHZA0HPBuH+1JkMl9L2rFcBSnloVFZMYcCxZMMBNhdTDC6NpLAZNznMR9Vaan1g/pUtz4t9Z+vW4a6IbGZiwHRxAj66C48/4B4Aq70NXA4oWqAXb4mKF8xGlO24TPKwZOZuE [...]
            },
            "metadata_fingerprint": "MUbas5LsmDE=",
            "name": "kube-kkadioui-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.102.70.160",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/networks/kube-network",
                "network_ip": "10.0.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/test2-161022/regions/us-west2/subnetworks/kube-subnet-eu",
                "subnetwork_project": "test2-161022"
              }
            ],
            "project": "test2-161022",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test2-161022/zones/us-west2-b/instances/kube-kkadioui-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-west2-b"
          },
          "dependencies": [
            "google_compute_network.kube_network",
            "google_compute_subnetwork.kube_subnet_eu2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "kube_worker_eu2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "ioumassate",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20231004",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/test2-161022/zones/us-west2-b/disks/kube-ioumassate-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/test2-161022/zones/us-west2-b/instances/kube-ioumassate-worker",
            "instance_id": "7946228501962490600",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ioumassate:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDYDNtFiKclSLEaVOZSZ4vQfAB69l3K8tYeK16zzpg+hiTmagiZvEGq8XB0Q46dvroMAbEzAVEayihwcjjcsNtNLNHjHjImx8mwE0a+62smM0UmjuyXOym1pdNsaWq0Gg7zSIlOj4j3AfWg1DQQ0d7gQ5lFqpncR2fDkfTywg9s/10p54bKcMSlOIMd5ihCmoRODs5d9aVyCmHrCBnxcryOwsacS/i5wcPmBNvyqb1lh9GICjD+xthi4TjTEbGf2sxXSkGP0Tqvp4GZ0IJlzJi080LTsopKl6K5iOUHZA0HPBuH+1JkMl9L2rFcBSnloVFZMYcCxZMMBNhdTDC6NpLAZNznMR9Vaan1g/pUtz4t9Z+vW4a6IbGZiwHRxAj66C48/4B4Aq70NXA4oWqAXb4mKF8xGlO24TPKwZOZuE [...]
            },
            "metadata_fingerprint": "MUbas5LsmDE=",
            "name": "kube-ioumassate-worker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.94.86.14",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/networks/kube-network",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/test2-161022/regions/us-west2/subnetworks/kube-subnet-eu",
                "subnetwork_project": "test2-161022"
              }
            ],
            "project": "test2-161022",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test2-161022/zones/us-west2-b/instances/kube-ioumassate-worker",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-west2-b"
          },
          "dependencies": [
            "google_compute_network.kube_network",
            "google_compute_subnetwork.kube_subnet_eu2"
          ]
        },
        {
          "index_key": "kkadioui",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20231010",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/test2-161022/zones/us-west2-b/disks/kube-kkadioui-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/test2-161022/zones/us-west2-b/instances/kube-kkadioui-worker",
            "instance_id": "5910655621338036238",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ioumassate:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDYDNtFiKclSLEaVOZSZ4vQfAB69l3K8tYeK16zzpg+hiTmagiZvEGq8XB0Q46dvroMAbEzAVEayihwcjjcsNtNLNHjHjImx8mwE0a+62smM0UmjuyXOym1pdNsaWq0Gg7zSIlOj4j3AfWg1DQQ0d7gQ5lFqpncR2fDkfTywg9s/10p54bKcMSlOIMd5ihCmoRODs5d9aVyCmHrCBnxcryOwsacS/i5wcPmBNvyqb1lh9GICjD+xthi4TjTEbGf2sxXSkGP0Tqvp4GZ0IJlzJi080LTsopKl6K5iOUHZA0HPBuH+1JkMl9L2rFcBSnloVFZMYcCxZMMBNhdTDC6NpLAZNznMR9Vaan1g/pUtz4t9Z+vW4a6IbGZiwHRxAj66C48/4B4Aq70NXA4oWqAXb4mKF8xGlO24TPKwZOZuE [...]
            },
            "metadata_fingerprint": "MUbas5LsmDE=",
            "name": "kube-kkadioui-worker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.94.28.196",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/networks/kube-network",
                "network_ip": "10.0.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/test2-161022/regions/us-west2/subnetworks/kube-subnet-eu",
                "subnetwork_project": "test2-161022"
              }
            ],
            "project": "test2-161022",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test2-161022/zones/us-west2-b/instances/kube-kkadioui-worker",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-west2-b"
          },
          "dependencies": [
            "google_compute_network.kube_network",
            "google_compute_subnetwork.kube_subnet_eu2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "kube_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/test2-161022/global/networks/kube-network",
            "mtu": 0,
            "name": "kube-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "test2-161022",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/networks/kube-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "kube_subnet_eu2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-08T07:25:40.958-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/test2-161022/regions/us-west2/subnetworks/kube-subnet-eu",
            "ip_cidr_range": "10.0.0.0/22",
            "name": "kube-subnet-eu",
            "network": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/networks/kube-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "test2-161022",
            "purpose": "PRIVATE",
            "region": "us-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "172.16.0.0/24",
                "range_name": "secondary"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test2-161022/regions/us-west2/subnetworks/kube-subnet-eu",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.kube_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "kube_subnet_us2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-08T07:25:40.823-07:00",
            "gateway_address": "10.0.4.1",
            "id": "projects/test2-161022/regions/us-west2/subnetworks/kube-subnet-us",
            "ip_cidr_range": "10.0.4.0/22",
            "name": "kube-subnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/test2-161022/global/networks/kube-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "test2-161022",
            "purpose": "PRIVATE",
            "region": "us-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "172.17.0.0/24",
                "range_name": "secondary"
              },
              {
                "ip_cidr_range": "172.18.0.0/24",
                "range_name": "primary"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test2-161022/regions/us-west2/subnetworks/kube-subnet-us",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.kube_network"
          ]
        }
      ]
    }
  ]
}